// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot and contain correct buttons 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot of rendered items when multiselecting channels - DM channels and public channels category 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot of rendered items when multiselecting channels - public channels and DM category 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should show correct menu items when channel is DM 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Conversation"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "D",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup />
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={false}
      onClick={[Function]}
      show={true}
      text="Close Conversation"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should show correct menu items when channel is Town Square 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "town-square",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should show correct menu items when channel is favorite 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarIcon
          size={16}
        />
      }
      id="unfavorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Unfavorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should show correct menu items when channel is muted 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOffOutlineIcon
          size={16}
        />
      }
      id="unmute-channel_id"
      onClick={[Function]}
      show={true}
      text="Unmute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should show correct menu items when channel is private 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "P",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should show correct menu items when channel is read 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsUnread-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Unread"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should show correct menu items when channel is unread 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <MarkAsUnreadIcon
          size={16}
        />
      }
      id="markAsRead-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Read"
    />
    <MenuItemAction
      icon={
        <StarOutlineIcon
          size={16}
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <Memo(ChannelMoveToSubMenu)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <LinkVariantIcon
          size={16}
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <AccountOutlineIcon
          size={16}
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <CloseIcon
          size={16}
        />
      }
      id="leave-channel_id"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;
